--- a/bbquiz/templates/tcd-eleceng-latex.jinja
+++ b/bbquiz/templates/tcd-eleceng-latex.jinja
@@ -131,6 +131,8 @@
 
 \usepackage{fancyhdr}
 
+\usepackage{svg}
+
 \newcommand{\omrSIZE}{}
 \newcommand{\omrSKIP}{.7em}
 %%\newcommand{\omrFONT}{\fontspec{[OMRBubbles.ttf]}}
@@ -277,8 +279,6 @@ essay question
 \end{multicols}
 
 \cleardoublepage
-
-SGSHGSHJGSHJGS
 
 <| for q in questions |>
 <| if q.type == 'essay' |>
