image with width and removing empty blockcodes

--- a/bbquiz/templates/preview-html.jinja
+++ b/bbquiz/templates/preview-html.jinja
@@ -1,4 +1,7 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
+  <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <style>
     p {max-width: 40em;   page-break-before: avoid;}
     .correct { background: #bfb; max-width: 34em }
@@ -16,6 +19,8 @@
     li { max-width: 40em; page-break-before: avoid; }
     div.block { }
     </style>
+  </head>
+  <body>
     <ol>
 
 <| for q in questions |>
@@ -112,5 +117,7 @@
 </ol>
 <br><p><b>Total Marks: << total_marks >> </b></p><br></ol>
 
+</body>
+</html>
 
 
