--- a/src/bbquiz/templates/preview-html.jinja
+++ b/src/bbquiz/templates/preview-html.jinja
@@ -2,7 +2,8 @@
 <html dir="ltr" lang="en">
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <style>
+	<title>Quiz</title>
+    <style type="text/css">
     p {max-width: 40em;   page-break-before: avoid;}
     .correct { background: #bfb; max-width: 34em }
     .incorrect { background: #fbb; max-width: 34em }
@@ -113,8 +114,9 @@
 <|- endif          |>
   </li>
 <| endfor |>
-</ol>
-<br><p><b>Total Marks: << total_marks >> </b></p><br></ol>
+	</ol>
+	
+<br><p><b>Total Marks: << total_marks >> </b></p>
 
 </body>
 </html>
