--- a/src/bbquiz/templates/preview-html.jinja
+++ b/src/bbquiz/templates/preview-html.jinja
@@ -5,24 +5,25 @@
 	<title>Quiz</title>
     <style type="text/css">
 	 html * {
-		 font-family: sans-serif;
+	 font-family: sans-serif;
+     	 line-height: 1.35;	 
 	 }
      p {
 		 max-width: 40em;
 		 page-break-before: avoid;
-		 margin: 0.5em 0;
+	     margin: 0.5em 0;
 	 }	 
-	 .incorrect.hideanswers {
+	 .incorrect {
 		 color: black;
 		 background: none;
 		 border: none;				   		 
 	 }
-	 .correct.hideanswers {
+	 .correct {
 		 color: black;
 		 background: none;
 		 border: none;				   		 
 	 }
-     .correct {
+     .correct.showanswers {
 		color: #3c763d;
 		background: #dff0d8;		 
 		border-color: #d6e9c6;
@@ -30,7 +31,7 @@
 		 /* border: 1px solid; */
 		border-radius: 4px;
 	}
-    .incorrect {
+    .incorrect.showanswers {
 		color: #a94442;
 		background: #f2dede;
 		border-color: #ebccd1;
@@ -54,27 +55,36 @@
 		 list-style: lower-latin;
 		 counter-reset: item;
 	 }
+	 li.question li:first-child {
+		 margin-top: 1.5em;
+     }
+	 ol.question-list {
+		 margin: 0em 0em 0em -2em;
+	 }
 	 ol.question-list li.question {
-		 margin: 2em 0em;
+		 margin: 1.25em 0em;
 		 counter-increment: item;
 		 margin-bottom: 5px;
 	 }
 	 ol.question-list li.question:before {
 	     margin-right: 10px;
-	     margin-bottom: 0.5em;
+	     margin-bottom: 1em;
 		 content: "QUESTION " counter(item);
 		 font-size: 100%;
+		 font-weight: 600;
 	     display: inline-block;}
 	 .question {
-	     border-left: 2px solid lightgray;
-         padding-left: 1em;
+	     border: 1px solid lightgray;
+		 border-radius: 4px;
+		 padding: 1.5em;
 	 }
+	 
 	 ol { max-width: 40em; page-break-before: avoid; }
      li { max-width: 40em; page-break-before: avoid; }
     </style>
   </head>
   <body>
-<p><i>Total Possible Marks: 10.0 </i>  <button onclick="toggleHideAnswers()" style="float:right">Hide Answers</button>
+<p><i>Total Possible Marks: 10.0 </i>  <button onclick="toggleShowAnswers()" style="float:right">Show Answers</button>
     <ol class='question-list'>
 <| for q in questions |>
 <li class='question' id='Q<< loop.index >>' style='vertical-align: top;'>
@@ -166,16 +176,18 @@
 	</ol>	
 
 <script>
-function toggleHideAnswers() {
+
+
+  function toggleShowAnswers() {
 	 var elements = document.getElementsByClassName("correct");
 	 console.log(elements)
 	 for (let i=0; i<elements.length; i++){ 
-		 elements[i].classList.toggle("hideanswers");
+		 elements[i].classList.toggle("showanswers");
 	 }
 	 var elements = document.getElementsByClassName("incorrect");
 	 console.log(elements)
 	 for (let i=0; i<elements.length; i++){ 
-		 elements[i].classList.toggle("hideanswers");
+		 elements[i].classList.toggle("showanswers");
 	 }
  }
 </script>
