--- a/src/bbquiz/templates/preview-html.jinja
+++ b/src/bbquiz/templates/preview-html.jinja
@@ -18,6 +18,12 @@
 		 background: none;
 		 border: none;				   		 
 	 }
+	 .essay-answer {
+	 display: none;
+	 }
+	 .essay-answer.showanswers {
+	 display: block;	 
+	 }	 
 	 .correct {
 		 color: black;
 		 background: none;
@@ -69,7 +75,7 @@
 	 ol.question-list li.question:before {
 	     margin-right: 10px;
 	     margin-bottom: 1em;
-		 content: "QUESTION " counter(item);
+		 content: "QUESTION " attr(questionid);
 		 font-size: 100%;
 		 font-weight: 600;
 	     display: inline-block;}
@@ -78,23 +84,46 @@
 		 border-radius: 4px;
 		 padding: 1.5em;
 	 }
+	 .question-type{
+		 float: right;
+		 font-style: italic;
+	 }
+	 .marks {
+		 float: right;
+		 margin: 0em 1em;
+		 font-weight: 600;		 
+	 }
+	 .marks:after{
+		 content: ' marks ]'
+     }
+	 .marks:before{
+		 content: '[ '
+     }
 	 
 	 ol { max-width: 40em; page-break-before: avoid; }
      li { max-width: 40em; page-break-before: avoid; }
     </style>
   </head>
   <body>
-<p><i>Total Possible Marks: 10.0 </i>  <button onclick="toggleShowAnswers()" style="float:right">Show Answers</button>
+	<p><i>Total Possible Marks: 10.0 </i>
+	  <button onclick="toggleShowAnswers()"
+			  id="toggleShowAnswersBtn"
+			  style="float:right"
+			  title= "Shortcut: m">Show Answers</button>
+	  <button onclick="toggleSlideShow()"
+			  id="toggleSlideShowBtn"
+			  style="float:right"
+			  title= "Shortcut: l">Slide Show</button>
     <ol class='question-list'>
 <| for q in questions |>
-<li class='question' id='Q<< loop.index >>' style='vertical-align: top;'>
+<li class='question' id='Q<< loop.index >>' questionid='<< loop.index >>' style='vertical-align: top;'>
 <| if q.type == 'essay' |>
-<i> Essay [ << q.marks >> ]</i>
+<div class='question-type'>Essay</div><div class='marks'><< q.marks >></div>
 <<q.question>>
 <| if q.answer is defined |>
-  <div style='background:#eee; max-width: 34.5em;
+  <div class='essay-answer' style='background:#eee; max-width: 34.5em;
 			  padding: 1em; margin-bottom:1em; margin-top:1em'>
-  <p style='margin:0 0 1em 0'><i>indicative answer:</i></p>
+  <p><i>indicative answer:</i></p>
   <<q.answer>>
 </div>
   <| else |>
@@ -104,7 +133,7 @@
   </div>	
   <| endif |>
 <| elif q.type == 'mc'|>
-<i> Multiple Choice [ << q.marks >> ]</i>
+<div class='question-type'>Multiple Choice</div><div class='marks'><< q.marks >></div>
 <<q.question>>
 <ol class='answers'>
 <|-   for a in q.answers |>
@@ -118,7 +147,7 @@
 <|-    endfor +|>
 </ol>
 <| elif q.type == 'ma'|>
-<i> Multiple Answers [ << q.marks >> ]</i>
+<div class='question-type'>Multiple Answers</div><div class='marks'><< q.marks >></div>
 <<q.question>>
 <ol class='answers'>
 <|-   for a in q.answers |>
@@ -132,7 +161,7 @@
 <|-   endfor +|>
 </ol>
 <| elif q.type == 'matching' |>
-  <i> Matching [ << q.marks >> ]</i>
+<div class='question-type'>Matching</div><div class='marks'><< q.marks >></div>
 <<q.question>>
 <ol class='answers'>
 <|-   for a in q.answers |>
@@ -157,7 +186,7 @@
 <|-    endfor +|>
 </ol>
 <| elif q.type == 'ordering' |>
-  <i> Ordering [ << q.marks >> ]</i>
+<div class='question-type'>Ordering</div><div class='marks'><< q.marks >></div>
 <<q.question>>
 <ol class='answers'>
   <|-   for a in q.answers |>
@@ -176,20 +205,89 @@
 	</ol>	
 
 <script>
-
-
+  var slideShow = false;
+  var showAnswers = false;
+  
+  var currentQuestion = 1;
+  var nQuestions = document.getElementsByClassName("question").length;
+ 
   function toggleShowAnswers() {
-	 var elements = document.getElementsByClassName("correct");
-	 console.log(elements)
-	 for (let i=0; i<elements.length; i++){ 
-		 elements[i].classList.toggle("showanswers");
-	 }
-	 var elements = document.getElementsByClassName("incorrect");
-	 console.log(elements)
-	 for (let i=0; i<elements.length; i++){ 
-		 elements[i].classList.toggle("showanswers");
-	 }
+	  showAnswers = !showAnswers;
+
+	  nameList = ["correct", "incorrect", "essay-answer"]
+	  for (j in nameList){
+		  var elements = document.getElementsByClassName(nameList[j]);
+		  for (let i=0; i<elements.length; i++){ 
+			  elements[i].classList.toggle("showanswers");
+		  }
+	  }
+	  
+	  var button = document.getElementById("toggleShowAnswersBtn");
+
+	  if (showAnswers) {
+		  button.textContent = "Hide Answers";
+	  } else {
+		  button.textContent = "Show Answers";
+	  }
+  }
+
+ function toggleSlideShow() {
+     slideShow = !(slideShow);
+	 refreshShow();
+	 var button = document.getElementById("toggleSlideShowBtn");
+	  if (slideShow) {
+		  button.textContent = "Display All";
+	  } else {
+		  button.textContent = "Slide Show";
+	  }
+	 
  }
+
+ function refreshShow() {
+	  if (slideShow){
+		  var elements = document.getElementsByClassName("question");
+		  for (let i=0; i<elements.length; i++){
+			  if (elements[i].getAttribute('questionid') === currentQuestion.toString()) {
+				  elements[i].style.display = 'block';
+			  }
+			  else {
+				  elements[i].style.display = 'none';			  
+			  }
+		  }
+	  }
+	  else {
+		  var elements = document.getElementsByClassName("question");
+		  for (let i=0; i<elements.length; i++){		  
+			  elements[i].style.display = 'block';
+		  }
+	  }
+	  var button = document.getElementById("toggleShowAnswersBtn");
+      if (showAnswers) {
+		  button.textContent = "Show Answers";
+	  } else {
+		  button.textContent = "Hide Answers";
+	  }	 
+  }  
+
+  
+  document.addEventListener("keydown", function onEvent(event) {
+      if (event.key === "m") {
+		  toggleShowAnswers()
+      }
+      if (event.key === "l") {
+		  toggleSlideShow()
+      }
+      if (event.key === "ArrowLeft"  ) {
+		  currentQuestion = Math.max(currentQuestion - 1, 1);
+		  refreshShow();		  
+      }
+      if (event.key === "ArrowRight" ) {
+		  currentQuestion = Math.min(currentQuestion + 1, nQuestions);
+		  refreshShow();		  
+      }
+	  
+  });
+	    
 </script>
 
   </body>
