--- a/src/bbquiz/templates/preview-html.jinja
+++ b/src/bbquiz/templates/preview-html.jinja
@@ -105,7 +105,7 @@
     </style>
   </head>
   <body>
-	<p><i>Total Possible Marks: 10.0 </i>
+	<p><i>Total Possible Marks: << total_marks >> </i>
 	  <button onclick="toggleShowAnswers()"
 			  id="toggleShowAnswersBtn"
 			  style="float:right"
