revert enumerate item style in non-solutions to (a),(b),..., so as to make sure that these are not to key

--- a/src/bbquiz/templates/tcd-eleceng-latex.jinja
+++ b/src/bbquiz/templates/tcd-eleceng-latex.jinja
@@ -300,6 +300,10 @@ essay question
 \end{multicols}
 
 \cleardoublepage
+\ifsolutions\else
+\renewcommand{\labelenumii}{(\alph{enumii})}
+\renewcommand{\labelenumi}{(\alph{enumi})}
+\fi
 
 <| for q in questions |>
 <| if q.type == 'essay' |>
