--- a/src/bbquiz/templates/preview-html.jinja
+++ b/src/bbquiz/templates/preview-html.jinja
@@ -33,7 +33,7 @@
 		color: #3c763d;
 		background: #dff0d8;		 
 		border-color: #d6e9c6;
-		max-width: 34em;
+		/* max-width: 37em; */
 		 /* border: 1px solid; */
 		border-radius: 4px;
 	}
@@ -41,7 +41,7 @@
 		color: #a94442;
 		background: #f2dede;
 		border-color: #ebccd1;
-		max-width: 34em;
+		/* max-width: 37em; */
 		/* border: 1px solid; */
 		border-radius: 4px;				   
 	 }
