Feat: Add SVG/JPEG support and refactor image embedding

--- a/src/bbquiz/templates/preview-html.jinja
+++ b/src/bbquiz/templates/preview-html.jinja
@@ -55,11 +55,11 @@
 
 	 ol.question-list {
 		 list-style: none;
-		 counter-reset: item;
+		 /* counter-reset: item; */
 	 }
 	 ol.answers {
 		 list-style: lower-latin;
-		 counter-reset: item;
+		 /* counter-reset: item; */
 	 }
 	 li.question li:first-child {
 		 margin-top: 1.5em;
@@ -69,7 +69,7 @@
 	 }
 	 ol.question-list li.question {
 		 margin: 1.25em 0em;
-		 counter-increment: item;
+		 /* counter-increment: item; */
 		 margin-bottom: 5px;
 	 }
 	 ol.question-list li.question:before {
