Refactor: Rename project structure to quizml

--- a/src/quizml/templates/html-inline-style.css
+++ b/src/quizml/templates/html-inline-style.css
@@ -1,5 +1,5 @@
 /* This CSS is to be embedded with the HTML output of the Markdown to
-   HTML conversion in BBQUIZ.
+   HTML conversion in QuizML.
 
    DO NOT USE FANCY PSEUDO-CLASSES (e.g. :is(), etc.)
 
