--- a/src/quizml/templates/stats.jinja
+++ b/src/quizml/templates/stats.jinja
@@ -1,5 +1,5 @@
 | Q (<< stats['nb questions'] >>) | Type | Marks (<< "%3.1f"|format(stats['total marks']) >>) | # | Exp (<< "%2.1f"|format(stats['expected mark']) >>%) | Question Statement |
 |---:|:---:|---:|---:|---:|---|
-<| for q in stats['questions'] |>
+<| for q in stats['questions'] -|>
 | << loop.index >> | << q['type'] >> | << "%2.1f"|format(q['marks']) >> | << q['choices'] >> | << "%3.1f"|format(q['EM']) >> | << q['excerpt'] >> |
 <| endfor |>
